# hidproto

./: LICENSE.md  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
examples/: corsair.py  hyperx.py  ite8291.py  ite8297.py  ite8910.py  razer.py  steelseries.py
gui/: app.py  effect_panel.py  keyboard_widget.py  layouts.py  layouts_generated.py
hidproto/: __init__.py  checksum.py  cli.py  command.py  device.py  discovery.py  effect.py  layout.py  protocol.py  registry.py  transport.py  transport_hidapi.py
protocols/: coolermaster_keyboard.py  corsair_k70.py  ducky_one2.py  hyperx_alloy_elite.py  ite8291.py  ite8297.py  keychron_k3.py  logitech.py  logitech_g815.py  msi_vigor_gk30.py  razer.py  redragon_mouse.py  roccat_vulcan.py  steelseries_apex.py  wooting.py
protocols/alienware/: aw510k.py
protocols/asus/: tuf_keyboard.py
protocols/cherry/: mx_board.py
protocols/das/: q5.py
protocols/ducky/: one2.py
protocols/fnatic/: streak.py
protocols/hyperx/: alloy_elite.py
protocols/ite/: ite8291.py  ite8910.py
protocols/logitech/: g815.py
protocols/mountain/: everest.py
protocols/nzxt/: lift_mouse.py
protocols/obinslab/: annepro2.py
protocols/qmk/: openrgb.py
protocols/razer/: blackwidow.py
protocols/roccat/: vulcan.py
protocols/sony/: ds4.py
protocols/steelseries/: apex.py
tests/: test_cli.py  test_command.py  test_device.py  test_discovery.py  test_protocol.py
tools/: parse_klm.py
