[tool.poetry]
name = "hidproto"
version = "0.1.0"
description = "Declarative HID protocol framework for Linux"
authors = ["Chocapikk <balgogan@protonmail.com>"]
readme = "README.md"
repository = "https://github.com/Chocapikk/hidproto"
keywords = ["hid", "hidraw", "usb", "protocol", "keyboard", "rgb", "linux"]
packages = [
    { include = "hidproto" },
]
license = "MIT"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/Chocapikk/hidproto/issues"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9"
pytest = "^8.0"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
