[tool.poetry]
name = "hidproto"
version = "0.1.1"
description = "A Python DSL for HID device protocols on Linux"
authors = ["Chocapikk <balgogan@protonmail.com>"]
readme = "README.md"
repository = "https://github.com/Chocapikk/hidproto"
keywords = ["hid", "hidraw", "usb", "protocol", "keyboard", "rgb", "linux"]
packages = [
    { include = "hidproto" },
]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: POSIX :: Linux",
    "Topic :: System :: Hardware :: Hardware Drivers",
]

[tool.poetry.scripts]
hidproto = "hidproto.cli:main"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/Chocapikk/hidproto/issues"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9"
pytest = "^8.0"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E221"]

[tool.ruff.lint.per-file-ignores]
"examples/*" = ["E501"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
